--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,25 +1,53 @@
+# tmux display in 256 colors
+set -g default-terminal "screen-256color"
+
+# bind default prefix and set to Ctrl+a
+set -g prefix C-a
+bind C-a send-prefix
+
+setw -g aggressive-resize on
+
+# make delay shorter
+set -sg escape-time 0
+
+# Vi style Key Bindings
 set-window-option -g mode-keys vi
 
-# use vim-like keys for pane selection
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
+# Vim style pane selection
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
-# Terminal color type configuration
-set -g default-terminal "screen-256color"
-set -ga terminal-overrides ",xterm-256color:Tc"
+# Vi style copy-paste
+bind P paste-buffer
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
-# powerline
-run-shell "powerline-daemon -q"
-source "/usr/share/powerline/bindings/tmux/powerline.conf"
+# automatically renumber windows
+set-option -g renumber-windows on
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
 setw -g pane-base-index 1
 
-set-option -g renumber-windows on
+# Tmux scrolling for version >2.1
+# set -g mouse on
 
-# vi-style copying
-bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+# Status bar
+# Prevent session names from being truncated
+set -g status-left-length 40
+
+# statusbar colors
+set-option -g status-style fg=colour235,bg=colour136,default
+
+# window title colors
+set-window-option -g window-status-style fg=colour244,bg=default,dim
+
+# active window title colors
+set-window-option -g window-status-current-style fg=colour166,bg=default,bright
+
+# pane border
+set-option -g pane-border-style fg=colour166,bg=default
+set-option -g pane-active-border-style fg=colour241
