--- a/i3/config
+++ b/i3/config
@@ -276,6 +276,9 @@ for_window [instance="htop_scratchpad"] move to scratchpad, border none
 bindsym $mod+Shift+p [instance="htop_scratchpad"] scratchpad show
 exec urxvtc -name htop_scratchpad -e htop
 
+# Start Redshift
+exec --no-startup-id redshift
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
