--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -51,3 +51,6 @@ set-window-option -g window-status-current-style fg=colour166,bg=default,bright
 # pane border
 set-option -g pane-border-style fg=colour166,bg=default
 set-option -g pane-active-border-style fg=colour241
+
+# Terminal scrollback lines
+set -g history-limit 5000
